[gd_scene load_steps=3 format=3 uid="uid://c02lepjl6xu0s"]

[ext_resource type="Script" path="res://Scripts/Prototypes/prototype_ui.gd" id="1_j2cqn"]
[ext_resource type="Theme" uid="uid://dundj1k3w6wi4" path="res://resources/UI/ButtonTheme.tres" id="2_n7hmb"]

[node name="PrototypeUI" type="CanvasLayer"]
script = ExtResource("1_j2cqn")
button1_text = "Button 1"
button2_text = "Button 2"
button3_text = "Button 3"
button4_text = "Button 4"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_n7hmb")
text = "Prototype name"

[node name="Buttons" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 50

[node name="Action-1" type="Button" parent="Control/MarginContainer/Buttons"]
layout_mode = 2
theme = ExtResource("2_n7hmb")
text = "Action 1
"

[node name="Action-2" type="Button" parent="Control/MarginContainer/Buttons"]
layout_mode = 2
theme = ExtResource("2_n7hmb")
text = "Action 2
"

[node name="Action-3" type="Button" parent="Control/MarginContainer/Buttons"]
layout_mode = 2
theme = ExtResource("2_n7hmb")
text = "Action 3
"

[node name="Action-4" type="Button" parent="Control/MarginContainer/Buttons"]
layout_mode = 2
theme = ExtResource("2_n7hmb")
text = "Action 4
"

[connection signal="pressed" from="Control/MarginContainer/Buttons/Action-1" to="." method="_on_action_1_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Buttons/Action-2" to="." method="_on_action_2_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Buttons/Action-3" to="." method="_on_action_3_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Buttons/Action-4" to="." method="_on_action_4_pressed"]
